# llm-memory-extention

./: .dockerignore  .env.example  .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/llm-memory-auth/: Cargo.toml
crates/llm-memory-auth/src/: authorization_server.rs  dcr.rs  error.rs  google.rs  jwt.rs  lib.rs  middleware.rs  xff.rs
crates/llm-memory-coordinator/: Cargo.toml
crates/llm-memory-coordinator/src/: coordinator.rs  error.rs  input_builder.rs  lib.rs  metrics.rs  state.rs  worker.rs
crates/llm-memory-core/: Cargo.toml
crates/llm-memory-core/src/: concept.rs  error.rs  id.rs  lib.rs  scope.rs  time.rs
crates/llm-memory-llm/: Cargo.toml
crates/llm-memory-llm/src/: client.rs  client_http.rs  error.rs  haiku.rs  lib.rs  mock.rs  prompts.rs  sonnet.rs
crates/llm-memory-server/: Cargo.toml
crates/llm-memory-server/src/: account.rs  app.rs  config.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs
crates/llm-memory-server/src/mcp/: mod.rs  tools.rs  transport.rs
crates/llm-memory-server/src/mcp/tools/: export.rs  mod.rs  raw_append.rs  raw_read.rs  raw_search.rs  schema_read.rs  schema_update.rs  wiki_list.rs  wiki_read.rs  wiki_rebuild.rs
crates/llm-memory-storage/: Cargo.toml
crates/llm-memory-storage/migrations/: 0001_initial.sql  0002_fts_triggers.sql  0003_refresh_token_hash.sql
crates/llm-memory-storage/src/: error.rs  lib.rs  oauth_clients.rs  pool.rs  raws.rs  schemas.rs  search.rs  shared_memories.rs  tokens.rs  users.rs  wikis.rs
deploy/gce/: README.md  run.sh  startup.sh
docker/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  litestream.yml
docs/superpowers/plans/: 2026-05-13-llm-memory-extention-phase1.md  2026-05-22-phase1-followup-functional-bugs.md
docs/superpowers/runbooks/: e2e-checklist.md
docs/superpowers/specs/: 2026-05-13-llm-memory-extention-phase1-design.md
