[package]
name = "llm-memory-llm"
edition.workspace = true
license.workspace = true

[dependencies]
llm-memory-core = { path = "../llm-memory-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
