[package]
name = "llm-memory-storage"
edition.workspace = true
license.workspace = true

[dependencies]
llm-memory-core = { path = "../llm-memory-core" }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
